--- a/05_bino/styles/sections/_footer.scss
+++ b/05_bino/styles/sections/_footer.scss
@@ -41,7 +41,6 @@
             transition: font-size 0.5s ease, color 0.5s ease;
 
             &:hover {
-                font-size: 23px;
                 color: $red;
             }
         }
